Fix buttons alignment issue in modals

--- a/organizations/css/style.css
+++ b/organizations/css/style.css
@@ -1880,7 +1880,7 @@ a#archiveddowntimeBtn {
 }
 
 .submit-button {
-    margin-left: 0;
+    margin-left: 0px;
 }
 
 a.submit-button,
